--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "sanitize-html": "^1.20.1",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
