--- a/package.json
+++ b/package.json
@@ -2,28 +2,37 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.tsx",
   "dependencies": {
     "@babel/helper-builder-react-jsx": "^7.12.13",
     "@babel/helper-define-map": "^7.13.12",
     "@babel/helper-regex": "^7.10.5",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.3.0",
-    "@material-ui/icons": "^4.2.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
+    "@mui/styles": "^5.5.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "history": "^4.9.0",
     "html-to-react": "^1.3.4",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
-    "react": "^16.8.6",
+    "react": "^18.0.0",
     "react-animate-height": "^2.0.15",
-    "react-dom": "^16.8.6",
+    "react-dom": "^18.0.0",
     "react-modal": "^3.9.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "sanitize-html": "^2.3.2",
-    "universal-cookie": "^4.0.2"
+    "react-scripts": "5.0.0",
+    "sanitize-html": "^2.7.0",
+    "typescript": "^4.6.3",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
