--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.5.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
@@ -27,6 +29,7 @@
     "react-animate-height": "^2.0.15",
     "react-dom": "^18.0.0",
     "react-modal": "^3.9.1",
+    "react-redux": "^7.2.8",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
