--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "axios": "^0.26.1",
     "history": "^4.9.0",
     "html-to-react": "^1.3.4",
     "lodash": "^4.17.21",
